--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/aaa/Desktop/JTattoo-1.6.11.jar"/>
+	<classpathentry kind="lib" path="JTattoo-1.6.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AAA/Desktop/resource/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
