--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2016_0115자바미니프로젝트폼</name>
+	<name>FirstProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
